--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 resolver = "2"
 
 default-members = ["contract"]
-members = ["model", "contract", "integration-tests", "proc_macros"]
+members = ["model", "contract", "integration-tests"]
 
 [workspace.dependencies]
 anyhow = "1.0.75"
@@ -17,5 +17,5 @@ ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
 base64 = "0.21.3"
 sha256 = "1.3.0"
 
+integration-trait = { git = "https://github.com/sweatco/integration-trait.git", rev = "2f6fe3ec58f48090c6191364e6843dab526dd309" }
 model = { path = "model" }
-proc-macros = { path = "proc_macros" }
