--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ rand = "0.8.5"
 futures = "0.3.28"
 near-sdk = "4.1.1"
 itertools = "0.11.0"
-ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
 base64 = "0.21.3"
 sha256 = "1.3.0"
 
 integration-trait = { git = "https://github.com/sweatco/integration-trait.git", rev = "2f6fe3ec58f48090c6191364e6843dab526dd309" }
+integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "2b730e98c5e5cc3579786fe3a2cbd1866c5fd42e" }
 model = { path = "model" }
