--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ near-sdk = "4.1.1"
 itertools = "0.11.0"
 base64 = "0.21.3"
 sha256 = "1.3.0"
+tokio = { version = "1.33.0" }
 
 integration-trait = { git = "https://github.com/sweatco/integration-trait.git", rev = "2f6fe3ec58f48090c6191364e6843dab526dd309" }
-integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "783b0f0b524665db51db29680d3bbec9d42a40e4" }
+integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "9933f8b802e32dba7623cdec78479b689406a7c7" }
 model = { path = "model" }
