--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -12,6 +12,7 @@ fake = { workspace = true }
 rand = { workspace = true }
 futures = { workspace = true }
 itertools = { workspace = true }
+tokio = { workspace = true }
 
 model = { workspace = true }
 integration-utils = { workspace = true }
@@ -23,6 +24,5 @@ anyhow = "1.0"
 near-units = "0.2.0"
 # arbitrary_precision enabled for u128 types that workspaces requires for Balance types
 serde_json = { version = "1.0", features = ["arbitrary_precision"] }
-tokio = { version = "1.18.1", features = ["full"] }
 workspaces = "0.7.0"
 async-trait = "0.1.71"
