--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,14 @@ async-trait = "0.1.73"
 fake = "2.8.0"
 rand = "0.8.5"
 futures = "0.3.28"
-near-sdk = "4.1.1"
-itertools = "0.11.0"
+itertools = "0.12.0"
 base64 = "0.21.3"
 sha256 = "1.3.0"
-tokio = { version = "1.33.0" }
+tokio = { version = "1.28" }
 
-integration-trait = { git = "https://github.com/sweatco/integration-trait.git", rev = "2f6fe3ec58f48090c6191364e6843dab526dd309" }
-integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "9933f8b802e32dba7623cdec78479b689406a7c7" }
+near-workspaces = "0.9.0"
+near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
+
+integration-trait = { git = "https://github.com/sweatco/integration-trait.git", rev = "a8d27576beea8d4a5379caff72f9e637857c2429" }
+integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "0b3c2faf0db31cdb3481be4d35dbb48b62a98618" }
 model = { path = "model" }
