--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[features]
+default = []
+integration-test = []
+
 [dependencies]
 near-sdk = { workspace = true }
 
