--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -13,6 +13,7 @@ rand = { workspace = true }
 futures = { workspace = true }
 itertools = { workspace = true }
 tokio = { workspace = true }
+near-workspaces = { workspace = true }
 
 model = { workspace = true }
 integration-utils = { workspace = true }
@@ -24,5 +25,4 @@ anyhow = "1.0"
 near-units = "0.2.0"
 # arbitrary_precision enabled for u128 types that workspaces requires for Balance types
 serde_json = { version = "1.0", features = ["arbitrary_precision"] }
-workspaces = "0.7.0"
 async-trait = "0.1.71"
